--- a/frontend/src/angular/package.json
+++ b/frontend/src/angular/package.json
@@ -33,7 +33,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
-    "ngx-simple-charts": "^14.0.0-alpha-0",
+    "ngx-simple-charts": "^14.0.0",
     "material-design-icons": "3.0.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.1",
