--- a/frontend/src/angular/angular.json
+++ b/frontend/src/angular/angular.json
@@ -18,7 +18,7 @@
       "prefix": "app",
       "i18n": {
         "locales": {
-          "de": "i18n/messages.de.xlf"
+          "de": "i18n/messages.de.json"
         },
         "sourceLocale": "en"
       },
