--- a/helm/angularportfoliomgr/templates/kubTemplate.yaml
+++ b/helm/angularportfoliomgr/templates/kubTemplate.yaml
@@ -51,7 +51,7 @@ spec:
   capacity:
     storage: 1Gi
   hostPath:
-    path: /data/postgres1
+    path: /data/postgresapm
     type: DirectoryOrCreate
 ---
 apiVersion: v1
