--- a/frontend/src/angular/package.json
+++ b/frontend/src/angular/package.json
@@ -34,20 +34,19 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
-    "ngx-simple-charts": "^14.0.0",
+    "core-js": "^3.19.1",
     "material-design-icons": "3.0.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.1",
-    "zone.js": "~0.11.4",
-    "core-js": "^3.19.1"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.0",
-    "@angular-eslint/builder": "^14.0.0-alpha.0",
-    "@angular-eslint/eslint-plugin": "^14.0.0-alpha.0",
-    "@angular-eslint/eslint-plugin-template": "^14.0.0-alpha.0",
-    "@angular-eslint/schematics": "^14.0.0-alpha.0",
-    "@angular-eslint/template-parser": "^14.0.0-alpha.0",
+    "@angular-eslint/builder": "^14.0.0",
+    "@angular-eslint/eslint-plugin": "^14.0.0",
+    "@angular-eslint/eslint-plugin-template": "^14.0.0",
+    "@angular-eslint/schematics": "^14.0.0",
+    "@angular-eslint/template-parser": "^14.0.0",
     "@angular/cli": "^14.0.0",
     "@angular/compiler-cli": "^14.0.0",
     "@angular/language-service": "^14.0.0",
