--- a/frontend/src/angular/package.json
+++ b/frontend/src/angular/package.json
@@ -34,9 +34,9 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
-    "ngx-simple-charts": "^14.3.1",
     "core-js": "^3.19.1",
-    "material-design-icons": "3.0.1",
+    "material-icons": "^1.11.11",
+    "ngx-simple-charts": "^14.3.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
