--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -56,6 +56,7 @@ dependencies {
 		testImplementation 'com.h2database:h2'
 	} else {
 		runtimeOnly 'com.h2database:h2'
+		testImplementation 'com.h2database:h2'
 	}
 }
 
