--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -9,3 +9,4 @@ spring.jpa.database-platform=ch.xxx.manager.adapter.config.PGSQLMapDialect
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.show-sql=false
+spring.datasource.hikari.auto-commit=false
