--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -11,7 +11,7 @@
    limitations under the License.
  */
 plugins {
-	id 'org.springframework.boot' version '3.0.0-RC2'
+	id 'org.springframework.boot' version '3.0.0'
 	id 'io.spring.dependency-management' version '1.1.0'
 	id 'java'    
 }
@@ -22,7 +22,6 @@ sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
-	maven { url 'https://repo.spring.io/milestone' }
 }
 
 dependencies {
@@ -37,8 +36,8 @@ dependencies {
 	implementation 'org.liquibase:liquibase-core'
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'com.google.guava:guava:31.1-jre'
-	implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
-	implementation 'org.springdoc:springdoc-openapi-data-rest:1.6.12'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.13'
+	implementation 'org.springdoc:springdoc-openapi-data-rest:1.6.13'
 	implementation 'commons-net:commons-net:3.8.0'	
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
