--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -13,7 +13,7 @@
 plugins {
 	id 'org.springframework.boot' version '3.0.1'
 	id 'io.spring.dependency-management' version '1.1.0'
-	//id 'org.graalvm.buildtools.native' version '0.9.19'
+	id 'org.graalvm.buildtools.native' version '0.9.19'
 	id 'java'    
 }
 
